--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+Version 5.4 (7 Jan 2009)
+========================
+
+* Fixed build problem with generated lex files.
+
 Version 5.3 (14 Nov 2008)
 =========================
 
