--- a/NEWS
+++ b/NEWS
@@ -1,7 +1,7 @@
-Version 5.4 (unreleased)
-========================
+Version 5.3.1 (9 Feb 2009)
+==========================
 
-* Fixed build problem with generated lex files.
+* Fixed build problems on various systems.
 
 Version 5.3 (14 Nov 2008)
 =========================
