add link to original repo

--- a/README
+++ b/README
@@ -1,6 +1,8 @@
 IFM: Interactive Fiction Mapper
 ===============================
 
+INFO: This is a clone from https://bitbucket.org/zondo/ifm/src/default/
+
 About IFM
 ---------
 
@@ -73,9 +75,3 @@ Feel free to send comments, bug reports, suggestions, etc. to me.  I am
 Glenn Hutchings (<zondo42@gmail.com>).
 
 Happy mapping!
-
-<!--
-Local Variables:
-mode: markdown
-End:
---!>
