--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 IFM: Interactive Fiction Mapper
 ===============================
 
-INFO: This is a clone from https://bitbucket.org/zondo/ifm/src/default/
+INFO: This is a fork of https://bitbucket.org/zondo/ifm/src/default/
 
 About IFM
 ---------
